[package]
name = "dprand"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/fl3xice/dprand"
license-file = "LICENSE"
keywords = ["double", "pendulum", "random", "generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
